fixed z-index issue

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ img {
   position: absolute;
   box-shadow: 10px 10px 10px rgba(0,255,0,.5);
   background-color: white;
+  z-index: 2;
 }
 
 /* animated banner */
@@ -62,7 +63,7 @@ img {
   width: 100%;
   overflow: hidden;
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 ul {
   overflow: hidden;
